--- a/Smashtag/Views/Base.lproj/Main.storyboard
+++ b/Smashtag/Views/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Image Collection View Controller-->
+        <!--Title-->
         <scene sceneID="jHI-ks-Wgh">
             <objects>
                 <collectionViewController id="qRh-k1-fXD" customClass="ImageCollectionViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
@@ -53,8 +53,16 @@
                             <outletCollection property="gestureRecognizers" destination="Mdl-HM-82b" appends="YES" id="3iN-GT-bPR"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" title="Title" id="tp2-nM-ptA">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="kFS-MC-6K1">
+                            <connections>
+                                <segue destination="CvO-wt-X9d" kind="unwind" unwindAction="backToRoot:" id="5ym-Q8-1ct"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NoG-ll-u2P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="CvO-wt-X9d" userLabel="Exit" sceneMemberID="exit"/>
                 <pinchGestureRecognizer id="Mdl-HM-82b">
                     <connections>
                         <action selector="zoomCollectionView:" destination="qRh-k1-fXD" id="ZRg-2T-vho"/>
