--- a/Smashtag/Views/Base.lproj/Main.storyboard
+++ b/Smashtag/Views/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                 </textField>
-                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vyv-G5-93v">
+                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vyv-G5-93v" userLabel="showImagesButton">
                                     <rect key="frame" x="554" y="0.0" width="46" height="46"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="vyv-G5-93v" secondAttribute="height" multiplier="1:1" id="9pr-iW-qNk"/>
@@ -213,7 +213,7 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sLa-AV-LBL">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -279,7 +279,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="aFh-ie-Vob">
-                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="gYO-nc-aVh" id="ecc-9H-EYp"/>
@@ -360,7 +360,7 @@
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="efx-Na-zfB">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -447,7 +447,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                 </textField>
-                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kcl-ff-8pe">
+                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kcl-ff-8pe" userLabel="showImagesButton">
                                     <rect key="frame" x="554" y="0.0" width="46" height="46"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Kcl-ff-8pe" secondAttribute="height" multiplier="1:1" id="f2l-if-REm"/>
@@ -587,7 +587,7 @@
                                     <constraint firstAttribute="width" constant="160" id="pm8-hS-BaY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -624,9 +624,9 @@
         <image name="ico_stack_of_photos" width="100" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="72Z-GK-qAz"/>
         <segue reference="WhF-MR-hWy"/>
-        <segue reference="23p-vl-4my"/>
+        <segue reference="8eo-SW-YbM"/>
         <segue reference="IOV-c3-AnY"/>
+        <segue reference="Rbw-l3-oj4"/>
     </inferredMetricsTieBreakers>
 </document>
